# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python_CI.yml
gendiff/: __init__.py  cli.py
gendiff/formatters/: format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: format.py  gendiff.py  main.py  parsing.py
tests/: test_change_booleans.py  test_format.py  test_gendiff.py  test_generate_diff.py  test_parsing.py
tests/test_data/: results.py
